[git] update version to 0.1

--- a/book-cms-parent/book-cms-web/pom.xml
+++ b/book-cms-parent/book-cms-web/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.samara.mentoring</groupId>
     <artifactId>book-cms-parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
 
 </project>
