--- a/book-cms-parent/pom.xml
+++ b/book-cms-parent/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.samara.mentoring</groupId>
   <artifactId>book-cms-parent</artifactId>
-  <version>0.1</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Book CMS :: Parent</name>
   <url>http://ninjafrombox.github.io/book-cms</url>
