--- a/book-cms-parent/pom.xml
+++ b/book-cms-parent/pom.xml
@@ -2,7 +2,6 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.samara.mentoring</groupId>
   <artifactId>book-cms-parent</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -41,9 +40,10 @@
     <version.jdk>1.6</version.jdk>
     <version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
     <version.maven.war.plugin>2.4</version.maven.war.plugin>
-    <version.jetty.maven.plugin>8.1.13.v20130916</version.jetty.maven.plugin>
     <version.maven.resources.plugin>2.6</version.maven.resources.plugin>
     <version.maven.site.plugin>3.3</version.maven.site.plugin>
+    <version.jboss.spec.javaee.6.0>3.0.2.Final</version.jboss.spec.javaee.6.0>
+    <version.jboss.maven.plugin>7.5.Final</version.jboss.maven.plugin>
     <version.maven.project.info.reports.plugin>2.7</version.maven.project.info.reports.plugin>
     <version.maven.surefire.report.plugin>2.16</version.maven.surefire.report.plugin>
     <version.cobertura.maven.plugin>2.6</version.cobertura.maven.plugin>
@@ -51,7 +51,6 @@
     <version.maven.checkstyle.plugin>2.10</version.maven.checkstyle.plugin>
     <version.maven.scm.publish.plugin>1.0-beta-2</version.maven.scm.publish.plugin>
     <version.crc.source.maven.plugin>1.0</version.crc.source.maven.plugin>
-    <version.spring>3.2.4.RELEASE</version.spring>
     <version.slf4j>1.7.5</version.slf4j>
     <version.log4j>1.2.17</version.log4j>
     <version.junit>4.11</version.junit>
@@ -61,47 +60,20 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${version.spring}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-          </exclusion>
-        </exclusions>
+        <groupId>org.jboss.spec</groupId>
+        <artifactId>jboss-javaee-6.0</artifactId>
+        <version>${version.jboss.spec.javaee.6.0}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
       <!-- logging -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${version.slf4j}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-        <version>${version.slf4j}</version>
-        <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>${version.slf4j}</version>
-        <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>${version.log4j}</version>
-        <scope>runtime</scope>
+        <scope>provided</scope>
       </dependency>
       <!-- test scope -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <version>${version.spring}</version>
-        <scope>test</scope>
-      </dependency>
       <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
@@ -138,9 +110,13 @@
           </configuration>
         </plugin>
         <plugin>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>${version.jetty.maven.plugin}</version>
+          <groupId>org.jboss.as.plugins</groupId>
+          <artifactId>jboss-as-maven-plugin</artifactId>
+          <version>${version.jboss.maven.plugin}</version>
+          <configuration>
+            <id>jboss-as</id>
+            <name>book-cms.war</name>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
