--- a/book-cms-parent/book-cms-web/pom.xml
+++ b/book-cms-parent/book-cms-web/pom.xml
@@ -44,19 +44,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>${version.maven.war.plugin}</version>
-          <configuration>
-            <failOnMissingWebXml>false</failOnMissingWebXml>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.jboss.as.plugins</groupId>
           <artifactId>jboss-as-maven-plugin</artifactId>
           <version>${version.jboss.maven.plugin}</version>
-          <configuration>
-            <name>book-cms.war</name>
-          </configuration>
         </plugin>
     </plugins>
+    <finalName>book-cms</finalName>
   </build>
 
   <profiles>
