[Jenkins] configure deployment

--- a/book-cms-parent/book-cms-web/pom.xml
+++ b/book-cms-parent/book-cms-web/pom.xml
@@ -70,7 +70,7 @@
             <executions>
               <execution>
                 <goals>
-                  <goal>deploy</goal>
+                  <goal>deploy-only</goal>
                 </goals>
                 <phase>package</phase>
               </execution>
