--- a/book-cms-parent/pom.xml
+++ b/book-cms-parent/pom.xml
@@ -45,6 +45,7 @@
     <version.jboss.spec.javaee.6.0>3.0.2.Final</version.jboss.spec.javaee.6.0>
     <version.maven.project.info.reports.plugin>2.7</version.maven.project.info.reports.plugin>
     <version.maven.surefire.report.plugin>2.16</version.maven.surefire.report.plugin>
+    <version.findbugs.maven.plugin>2.5.3</version.findbugs.maven.plugin>
     <version.cobertura.maven.plugin>2.6</version.cobertura.maven.plugin>
     <version.maven.javadoc.plugin>2.9.1</version.maven.javadoc.plugin>
     <version.maven.checkstyle.plugin>2.10</version.maven.checkstyle.plugin>
@@ -132,6 +133,18 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>${version.cobertura.maven.plugin}</version>
+        <configuration>
+          <formats>
+            <format>xml</format>
+          </formats>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <reporting>
@@ -150,6 +163,11 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
         <version>${version.cobertura.maven.plugin}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>${version.findbugs.maven.plugin}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
