--- a/book-cms-parent/book-cms-core/pom.xml
+++ b/book-cms-parent/book-cms-core/pom.xml
@@ -31,6 +31,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
