--- a/book-cms-parent/pom.xml
+++ b/book-cms-parent/pom.xml
@@ -52,6 +52,7 @@
     <version.maven.scm.publish.plugin>1.0-beta-2</version.maven.scm.publish.plugin>
     <version.junit>4.11</version.junit>
     <version.mockito>1.9.5</version.mockito>
+    <version.jmockit>1.6</version.jmockit>
   </properties>
 
   <dependencyManagement>
@@ -76,6 +77,12 @@
           <version>${version.mockito}</version>
           <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.googlecode.jmockit</groupId>
+          <artifactId>jmockit</artifactId>
+          <version>${version.jmockit}</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -97,7 +104,7 @@
           <version>${version.maven.surefire.plugin}</version>
           <configuration>
             <includes>
-              <include>**/*UnitTest.java</include>
+              <include>**/*UnitTestSuite.java</include>
             </includes>
           </configuration>
         </plugin>
